--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,30 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Node modules
+node_modules/
+
+# Build results
+/build/
+/public/
+
+# Env files
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.vscode/
+.idea/
+*.sublime-workspace
+
+# yarn.lock
+# package-lock.json
+
